@@ -137,6 +137,8 @@ Set::FA - A Set of Discrete Finite Automata
 
 =head1 Synopsis
 
+This is scripts/synopsis.1.pl:
+
 	#!/usr/bin/perl
 
 	use strict;
@@ -151,16 +153,16 @@ Set::FA - A Set of Discrete Finite Automata
 	{
 		Set::FA::Element -> new
 		(
-		 accepting   => ['ping'],
-		 id          => "a.$_",
-		 start       => 'ping',
-		 transitions =>
-		 [
-		  ['ping', 'a', 'pong'],
-		  ['ping', '.', 'ping'],
-		  ['pong', 'b', 'ping'],
-		  ['pong', '.', 'pong'],
-		 ],
+			accepting   => ['ping'],
+			id          => "a.$_",
+			start       => 'ping',
+			transitions =>
+			[
+				['ping', 'a', 'pong'],
+				['ping', '.', 'ping'],
+				['pong', 'b', 'ping'],
+				['pong', '.', 'pong'],
+			],
 		)
 	} (0 .. 2);
 
@@ -168,16 +170,16 @@ Set::FA - A Set of Discrete Finite Automata
 	{
 		Set::FA::Element -> new
 		(
-		 accepting   => ['pong'],
-		 id          => "b.$_",
-		 start       => 'ping',
-		 transitions =>
-		 [
-		  ['ping', 'a', 'pong'],
-		  ['ping', '.', 'ping'],
-		  ['pong', 'b', 'ping'],
-		  ['pong', '.', 'pong'],
-		 ],
+			accepting   => ['pong'],
+			id          => "b.$_",
+			start       => 'ping',
+			transitions =>
+			[
+				['ping', 'a', 'pong'],
+				['ping', '.', 'ping'],
+				['pong', 'b', 'ping'],
+				['pong', '.', 'pong'],
+			],
 		)
 	} (0 .. 4);
 
@@ -186,9 +188,9 @@ Set::FA - A Set of Discrete Finite Automata
 	my($sub_b) = $set -> final;
 
 	print 'Size of $sub_a: ', $sub_a -> size, ' (expect 3). ',
-	'Size of @a: ', scalar @a, ' (expect 3). ',
-	'Size of $sub_b: ', $sub_b -> size, ' (expect 5). ',
-	'Size of @b: ', scalar @b, ' (expect 5). ', "\n",
+		'Size of @a: ', scalar @a, ' (expect 3). ',
+		'Size of $sub_b: ', $sub_b -> size, ' (expect 5). ',
+		'Size of @b: ', scalar @b, ' (expect 5). ', "\n",
 
 =head1 Description
 
@@ -297,6 +299,10 @@ Calls L<Set::FA::Element/step($input)> on all members of the set.
 
 Returns nothing.
 
+=head1 FAQ
+
+See <Set::FA::Element/FAQ>.
+
 =head1 Machine-Readable Change Log
 
 The file Changes was converted into Changelog.ini by L<Module::Metadata::Changes>.
@@ -368,6 +374,10 @@ You build up a transition network diagram, labouriously, with 1 line of code at 
 =back
 
 See also L<this Wikipedia article|http://en.wikipedia.org/wiki/Deterministic_finite-state_machine>.
+
+=head1 Repository
+
+L<https://github.com/ronsavage/Set-FA>
 
 =head1 Support
 
